[project]
name = "neo4j-intro"
version = "0.1.0"
description = ""
authors = [
    {name = "Anish Gurjar",email = "50738829+anishgurjar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "neo4j_intro", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
