[project]
name = "mergesort"
version = "0.1.0"
description = ""
authors = [
    {name = "Anish Gurjar",email = "50738829+anishgurjar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "mergesort", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
