[project]
name = "fixures-demo"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

testpaths = [
    "tests"
]
# What files should be considered test files
python_files = [
    "test_*.py",
    "*_test.py"
]
# What functions should be considered test functions
python_functions = [
    "test_*"
]
