[project]
name = "counting-sort-stable"
version = "0.1.0"
description = ""
authors = [
    {name = "Anish Gurjar",email = "50738829+anishgurjar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "counting_sort_stable", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
